resources/css/sass/pages/_matches.scss
@use '../abstracts/' as *;

$text-color-gray: #949494;
$border-color-light: #b0b0b0;
$border-color-dark: #e2e0e1;

.matches-wrapper {
  max-width: 1200px;
  margin: 0 auto 100px;


  .message{
    text-align: center;
    font-size: 25px;
    margin-top: 40px;
    padding-bottom: 40px;
    border-bottom: 2px solid $border-color-dark;
  }
  .matches-header,
  .match-entry {
    display: grid;
    grid-auto-flow: column;
    grid-template-columns: 100px 224px 224px 120px 133px 133px 133px 133px;
    line-height: 145%;
    font-size: 17px;

    a{
      text-decoration: none;
      color: #000;

      &:hover {
        color: $red;
      }
    }
  }

  .matches-header {
    margin-top: 60px;
    padding: 0 10px 5px;
    font-size: 16px;
    color: $text-color-gray;
    border-bottom: 2px solid $border-color-light;

    .number {
      padding-left: 16px;
    }
  }
}

.score,
.date,
.location {
  place-self: center;
  text-align: center;
}

.score .gray {
  color: $text-color-gray;
}

.match-entry {
  height: 100px;
  border-bottom: 2px solid $border-color-dark;
  align-items: center;
  padding-left: 10px;
  position: relative;
  .edit-btn{
    position: absolute;
    font-family: 'Helvetica Neue';
    text-transform: uppercase;
    right: -50px;
    color: black;
    top: 48%;
    transform: translateY(-50%);
    font-size: 30px;
    padding: 5px 10px;
    padding-top: 13px;
    text-decoration: none;

    svg{
        width: 30px;
        height: 30px;
    }


    &:hover {
        svg{
            fill: $red;
        }
    }

  }
  .winner,
  .loser{
    .points{
      color: $mid-gray;
      font-weight: normal;
      text-align: center;
    }
  }
  .winner {
    font-weight: bold;
  }

  .number {
    width: 40px;
    aspect-ratio: 1 / 1;
    border-radius: 100px;
    display: grid;
    place-items: center;
    align-items: center;
    padding-left: 2px;
    padding-top: 2px;
  }
}

#mobile {
  display: none;
}

@media only screen and (max-width: 1200px) {
  #desktop {
    display: none;
  }

  #mobile {
    display: block;
  }

  .matches-wrapper {
    max-width: 100%;
    overflow: hidden;
    margin-bottom: 250px;

    .message{
      font-size: 20px;
      margin-top: 40px;
    }
  }

  .matches-wrapper .match-entry {
    min-height: 250px;
    position: relative;
    .edit-btn{
      top: 40px;
      left: 0px;
      font-size: 15px;
      padding: 5px 15px;
      padding-top: 9px;
      right: unset;
    }
    display: flex;
    height: auto;
    flex-direction: column;
    gap: 29px;
    padding: 26px 0 34px 0;

    .location {
      position: absolute;
      bottom: 10px;
      color: $text-color-gray;
      line-height: 1.7;
      a{
        color: $text-color-gray;
        &:hover {
          color: $red;
        }
      }
    }

    .score {
      font-size: 30px;
      line-height: 1.2;
      position: absolute;
      top: 14px;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      min-height: 72px;

      .games {
        font-size: 25px;
        color: $text-color-gray;
      }
    }

    .info{
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
    }

  }


  .info {
    display: grid;
    width: 300px;
    grid-auto-flow: column;
    grid-template-columns: repeat(3, 100px);
  }

  .info-wrapp {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    .sup {
      color: $text-color-gray;
      font-size: 11px;
    }

    .text {
      font-size: 18px;
      line-height: 1.2;
      text-align: center;
      position: relative;

        .points{
          color: $mid-gray;
          font-weight: normal;
          position: absolute;
          left: 50%;
          transform: translateX(-50%);
          bottom: -25px;
          text-align: center;
          margin-top: 10px;
      }
    }
  }

  .sep {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 35px;
  }

}

